hopefully fixing fonts on smaller screens for index

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,7 @@ body {
   }
   
   h1.headerText {
-      font-size: 140px;
+      font-size: 110px;
       font-style: italic;
       color: #808080;
   
